# crisis-signal-ai

./: .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SEARCH_CONSOLE_SETUP.md  SECURITY.md  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  params.yaml  pyproject.toml  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  research_proposal.yml
.github/workflows/: ci.yml  docs.yml  release.yml
apps/: dashboard.py
architecture/: index.html
author/: index.html
benchmarks/: README.md  results.csv
book/: README.md  citation.bib  metadata.json  outline.md  zenodo-metadata.json
book-map/: index.html
configs/: default.yaml
data/: README.md
dataset-card/: index.html
deployment/: index.html
docs/: architecture.md  author.md  book-map.md  dataset-card.md  deployment.md  doi-strategy.md  ethics.md  evaluation.md  index.md  model-card.md  portfolio-evidence.md  reproducibility.md  research-roadmap.md
docs/overrides/: main.html
doi-strategy/: index.html
ethics/: index.html
evaluation/: index.html
legacy/: README.md  original-notebook.ipynb  original-submission.csv
model-card/: index.html
overrides/: main.html
portfolio-evidence/: index.html
reproducibility/: index.html
research-roadmap/: index.html
scripts/: download_kaggle_data.py  make_demo_data.py  run_benchmark.py  validate_search_assets.py
search/: search_index.json
src/crisis_signal/: __init__.py  api.py  cli.py  (+12 more)
tests/: test_api.py  test_data.py  test_evaluation.py  test_llm.py  test_monitoring.py  test_text.py  test_training.py
(+4 files in other folders)
