[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-signal-ai"
version = "1.0.0"
description = "Trustworthy crisis-intelligence research and engineering toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Faramarz Kowsari"}]
keywords = ["nlp", "crisis-informatics", "trustworthy-ai", "mlops"]
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "scikit-learn>=1.5,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1"]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]
mlops = ["mlflow>=2.14,<4", "pyyaml>=6,<7"]
transformers = [
  "datasets>=2.20,<5",
  "evaluate>=0.4,<1",
  "torch>=2.3,<3",
  "transformers>=4.42,<6",
]
tensorflow = ["tensorflow>=2.16,<3"]
multimodal = ["Pillow>=10,<12", "ImageHash>=4.3,<5"]
dashboard = ["streamlit>=1.36,<2", "plotly>=5.22,<7"]

[project.scripts]
crisis-signal = "crisis_signal.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
